# ternary-llm

./: .gitignore  CMakeLists.txt  README.md  colab_setup.sh  infer.py  ternary_llm_colab.ipynb
include/: config.h  format.h  kernels.cuh  memory.h  model.h  sampler.h  tokenizer.h  transformer.h
kernels/: activations.cu  attention.cu  elementwise.cu  rmsnorm.cu  rope.cu  ternary_gemm.cu  ternary_gemv.cu
src/: main.cpp  memory.cpp  model.cpp  sampler.cpp  tokenizer.cpp  transformer.cpp
ternarize/: pack.py  requirements.txt  ternarize.py
tests/: benchmark.cu  test_packing.py  test_ternary_gemv.cu
tools/: diagnose_format.py
